Add platform staff and tenant staff
